<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Section Header: Select Tractor Type -->

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/header_padding"
            android:text="Application Information: "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_rgb"
            android:textSize="25sp" />

        <!-- Displayed information on the app -->

        <TextView
            android:id="@+id/tv_infotext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="0.00"
            android:lineSpacingExtra="2sp"
            android:text="@string/info_text"
            android:textColor="@color/info_rgb"
            android:textSize="@dimen/header_text_size" />

        <!-- Section Header: Select Tractor Type -->

        <TextView
            android:id="@+id/tv_trac_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/header_padding"
            android:text="Tractor Information: "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_rgb"
            android:textSize="25sp" />

        <!-- Displayed information on the Tractors -->

        <TextView
            android:id="@+id/tv_tractext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="0.05"
            android:lineSpacingExtra="2sp"
            android:text="@string/tractor_text"
            android:textColor="@color/info_rgb"
            android:textSize="@dimen/header_text_size" />

        <!-- Section Header: Select Implement Type -->

        <TextView
            android:id="@+id/tv_imp_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/header_padding"
            android:text="Implement Information: "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_rgb"
            android:textSize="25sp" />

        <!-- Displayed information on the Implements -->

        <TextView
            android:id="@+id/tv_imptext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="0.05"
            android:lineSpacingExtra="2sp"
            android:text="@string/implement_text"
            android:textColor="@color/info_rgb"
            android:textSize="@dimen/header_text_size" />

        <!-- Section Header: Select tractor HP -->

        <TextView
            android:id="@+id/tv_HP_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/header_padding"
            android:text="Tractor HP Information: "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_rgb"
            android:textSize="25sp" />

        <!-- Displayed information on the HP -->

        <TextView
            android:id="@+id/tv_HPtext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="0.05"
            android:lineSpacingExtra="2sp"
            android:text="@string/hp_text"
            android:textColor="@color/info_rgb"
            android:textSize="@dimen/header_text_size" />

        <!-- Section Header: Select Operating Speed -->

        <TextView
            android:id="@+id/tv_speed_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/header_padding"
            android:text="Operating Speed Information: "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_rgb"
            android:textSize="25sp" />

        <!-- Displayed information on the Speed Selection -->

        <TextView
            android:id="@+id/tv_speedtext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="0.05"
            android:lineSpacingExtra="2sp"
            android:text="@string/speed_text"
            android:textColor="@color/info_rgb"
            android:textSize="@dimen/header_text_size" />

        <!-- Control Buttons on the bottom of screen -->

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/ib_go_back"
                android:layout_width="54dp"
                android:layout_height="56dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="10sp"
                android:background="@drawable/d_return" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>